# notoize

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: quarter.yml
.notoize/: missing_variants.txt  script_conflicts.txt
src/: config.rs  lib.rs  main.rs
