[package]
name = "notoize"
version = "2.15.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate that tells you what Noto font stack you need."
repository = "https://github.com/mi2ebi/notoize/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gh-file-curler = "2.4.0"
itertools = "0.12.0"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
